<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/purple_500">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/LinearLayout_margin"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/TextView_calculadora"
            android:background="@color/black"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/TextView_tema_Prin"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/TextView_operacion"
            android:textSize="@dimen/TextViewn_second"
            android:gravity="center" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/purple_200"
        android:layout_margin="@dimen/Cardview_margin"
        app:cardCornerRadius="@dimen/Cardview_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/purple_200"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextView_restas"/>

            <Button
                android:id="@+id/Suma_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Button_suma"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/Button_margin"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/Cardview_radius"
        android:layout_margin="@dimen/Cardview_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/purple_200"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextView_restas"/>

            <Button
                android:id="@+id/Resta_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Button_resta"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/Button_margin"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>